--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "@capacitor/app": "4.0.1",
     "@capacitor/core": "4.3.0",
     "@capacitor/haptics": "4.0.1",
-    "@capacitor/keyboard": "4.0.1",
+    "@capacitor/keyboard": "^4.0.1",
     "@capacitor/status-bar": "4.0.1",
-    "@craco/craco": "^6.4.5",
     "@ionic/lab": "^3.2.14",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
@@ -25,13 +24,15 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^1.1.2",
     "clsx": "^1.2.1",
+    "firebase": "^9.12.1",
     "ionicons": "^6.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
+    "swiper": "^8.4.4",
     "swr": "^1.3.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
@@ -49,8 +50,8 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
     "eject": "react-scripts eject"
   },
