--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@capacitor/haptics": "4.0.1",
     "@capacitor/keyboard": "^4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@fontsource/roboto": "^4.5.8",
     "@ionic/lab": "^3.2.14",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
+    "@mui/material": "^5.10.10",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^13.3.0",
@@ -24,6 +28,7 @@
     "@types/react-router-dom": "^5.1.7",
     "axios": "^1.1.2",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.6",
     "firebase": "^9.12.1",
     "ionicons": "^6.0.3",
     "react": "^18.2.0",
@@ -34,6 +39,7 @@
     "react-scripts": "^5.0.1",
     "swiper": "^8.4.4",
     "swr": "^1.3.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
